--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation librarys.appcompat
     implementation librarys.recyclerview
+
+    compile librarys.butterknife
+    annotationProcessor librarys.butterknifeCompiler
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
