--- a/config.gradle
+++ b/config.gradle
@@ -27,7 +27,7 @@ ext{
             glide               : "com.github.bumptech.glide:glide:3.7.0",
             rxjava              : "io.reactivex:rxjava:1.2.0",
             rxandroid           : "io.reactivex:rxandroid:1.2.1",
-            adapterRxjava       : "com.squareup.retrofit2:adapter-rxjava:2.1.0",
+            retrofitRxjava       : "com.squareup.retrofit2:adapter-rxjava:2.1.0",
             fastjson            : "com.alibaba:fastjson:1.2.17",
             stetho              : "com.facebook.stetho:stetho:1.3.1",
             stethoOkhttp3       : "com.facebook.stetho:stetho-okhttp3:1.3.1",
